--- a/views/admin/addReview.hbs
+++ b/views/admin/addReview.hbs
@@ -8,42 +8,42 @@
     <li class="rating">
       <span class="rating__label">chicken piece rating:</span>
       <span class="nugget-0 rating__value rating__value--{{review.chickenPieceRating}}">
-        <input type="range" class="chickenRange" name="chickenRange" min="0" max="10" value="0">
+        <input type="range" class="chickenRange" name="chickenPieceRating" min="0" max="10" value="0">
         <label for="value" class="chickenRangeLabel">0</label>
       </span>
     </li>
     <li class="rating">
       <span class="rating__label">chicken wing rating:</span>
       <span class="nugget-0 rating__value rating__value--{{review.chickenWingRating}}">
-        <input type="range" class="chickenRange" name="chickenRange" min="0" max="10" value="0">
+        <input type="range" class="chickenRange" name="chickenWingRating" min="0" max="10" value="0">
         <label for="value" class="chickenRangeLabel">0</label>
       </span>
     </li>
     <li class="rating">
       <span class="rating__label">fry rating:</span>
       <span class="nugget-0 rating__value rating__value--{{review.fryRating}}">
-        <input type="range" class="chickenRange" name="chickenRange" min="0" max="10" value="0">
+        <input type="range" class="chickenRange" name="fryRating" min="0" max="10" value="0">
         <label for="value" class="chickenRangeLabel">0</label>
       </span>
     </li>
     <li class="rating">
       <span class="rating__label">sauce rating:</span>
       <span class="nugget-0 rating__value rating__value--{{review.sauceRating}}">
-        <input type="range" class="chickenRange" name="chickenRange" min="0" max="10" value="0">
+        <input type="range" class="chickenRange" name="sauceRating" min="0" max="10" value="0">
         <label for="value" class="chickenRangeLabel">0</label>
       </span>
     </li>
     <li class="rating">
       <span class="rating__label">drink rating:</span>
       <span class="nugget-0 rating__value rating__value--{{review.drinkRating}}">
-        <input type="range" class="chickenRange" name="chickenRange" min="0" max="10" value="0">
+        <input type="range" class="chickenRange" name="drinkRating" min="0" max="10" value="0">
         <label for="value" class="chickenRangeLabel">0</label>
       </span>
     </li>
     <li class="rating">
       <span class="rating__label">overall rating:</span>
       <span class="nugget-0 rating__value rating__value--{{review.overallRating}}">
-        <input type="range" class="chickenRange" name="chickenRange" min="0" max="10" value="0">
+        <input type="range" class="chickenRange" name="overallRating" min="0" max="10" value="0">
         <label for="value" class="chickenRangeLabel">0</label>
       </span>
     </li>
