tweak how reviews work

--- a/views/review.hbs
+++ b/views/review.hbs
@@ -1,4 +1,4 @@
-<p>{{review.comments}}</p>
+<p>{{review.comment}}</p>
 <ul class="rating-list">
     <li class="rating">
         <span class="rating__label">chicken piece rating:</span>
