--- a/static/css/site.css
+++ b/static/css/site.css
@@ -113,12 +113,12 @@ input[type=range]::-webkit-slider-thumb {
     cursor: pointer;
   }
 
-  // why don't these work together ?? find out next time
+  /* // why don't these work together ?? find out next time */
 
-.nugget-0 input[type=range]::-webkit-slider-thumb,
+/* .nugget-0 input[type=range]::-webkit-slider-thumb,
 .nugget-0 input[type=range]::-moz-range-thumb {    
     border: 1px solid red;
-}
+} */
 .nugget-1 input[type=range]::-webkit-slider-thumb {    
     background-image: url('/images/Chooks/nubbet-1.png');
 }
@@ -248,6 +248,16 @@ body {
     .review-list > li {
         max-width: 100%;
     }
+}
+
+.autocomplete {
+    background-color: white;
+    border: 1px solid grey;
+    cursor: pointer;
+}
+
+.autocomplete > div:hover {
+    background-color: coral;
 }
 
 
